職種(新規登録)のロジック作成
