# front/admin/project/src/open_api/models/index.ts
@@ -3,15 +3,14 @@
 export * from './AccessToken';
 export * from './Admin';
 export * from './Entry';
+export * from './FilePath';
 export * from './Job';
 export * from './JobCategory';
-export * from './ModelFile';
 export * from './QueryEntryList';
 export * from './QueryJobCategoryList';
 export * from './QueryJobList';
 export * from './QueryUserList';
 export * from './RequestEntry';
-export * from './RequestFile';
 export * from './RequestJob';
 export * from './RequestJobCategory';
 export * from './RequestLogin';
