# front/user/project/src/open_api/models/FilePath.ts
@@ -1,0 +1,64 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * OpenAPI Tutorial
+ * OpenAPI Tutorial by halhorn
+ *
+ * The version of the OpenAPI document: 0.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * ファイルパス
+ * @export
+ * @interface FilePath
+ */
+export interface FilePath {
+    /**
+     * ストレージパス
+     * @type {string}
+     * @memberof FilePath
+     */
+    storagePath: string;
+    /**
+     * フルパス
+     * @type {string}
+     * @memberof FilePath
+     */
+    url: string;
+}
+
+export function FilePathFromJSON(json: any): FilePath {
+    return FilePathFromJSONTyped(json, false);
+}
+
+export function FilePathFromJSONTyped(json: any, ignoreDiscriminator: boolean): FilePath {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'storagePath': json['storagePath'],
+        'url': json['url'],
+    };
+}
+
+export function FilePathToJSON(value?: FilePath | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'storagePath': value.storagePath,
+        'url': value.url,
+    };
+}
+
